--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,6 +3,81 @@ body {
 	background-color: azure;
 	font-family: bahnschrift;
 	font-size: 30px;
+	margin: 10px;
+
+}
+
+.advoware {
+	background-color: #333333;
+
+}
+
+a{
+	color: #fff !important;
+	text-transform: uppercase;
+	text-decoration: none;
+	background: #ed3330;
+	padding: 10px;
+	border-radius: 5px;
+	display: inline-block;
+	border: none;
+	transition: all 0.4s ease 0s;
+}
+
+
+.advoware th {
+	text-transform: uppercase;
+	font-size: 40px;
+	background-color: #ed3330;
+}
+
+th, td {
 	padding: 20px;
+
+}
+
+
+table {
+	position:absolute;
+    width:100%;
+	padding: 10px;
+    text-align:center;
+    vertical-align:middle;
+    z-index: 9999;
+	border-radius: 5px;
+
+	 *border-collapse: collapse; /* IE7 and lower */
+    border-spacing: 0;
+}
+
+video {
+
+	width: 80%;
+}
+
+
+.advoware tr {
+	background-color: #E0E0E0;
+
+
+}
+
+
+.advoware tr:nth-child(even) {
+	background-color: #BFB8B8;
+}
+
+.advoware tr:hover {
+	background-color: white;
+
+}
+
+
+
+
+
+a {
+	text-decoration: none;
+
 
 }
