--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -35,7 +35,7 @@ th, td {
 }
 
 table {
-    max-width: 100%;
+	    width:100%;
 	padding: 10px;
     text-align:center;
     vertical-align:middle;
@@ -43,12 +43,12 @@ table {
 	border-radius: 5px;
 	*border-collapse: collapse; /* IE7 and lower */
     border-spacing: 0;
+	float: left;
 }
 
 video {
 	width: 80%;
 }
-
 
 tr {
 	background-color: #E0E0E0;
@@ -56,11 +56,6 @@ tr {
 
 td:first-child {
 	font-weight: bold;
-	max-width: 150px;
-	min-width: 150px;
-	word-break: break-word;
-	hyphens: auto;
-	text-align: left;
 
 }
 
@@ -83,11 +78,55 @@ div {
 	margin-right: auto;
 }
 
-.sub_a {
+#back {
+	background-color: Aquamarine;
 	text-align: center;
-	width: 375px;
-	margin-left: auto;
-	margin-right: auto;
+	width: 200px;
+	margin-left: 10px;
+	border-radius: 0px;
+	clear: both;
+	margin-top: 30px;
+	float: right;
+ }
+
+ h1 {
+	color: white;
  }
 
 
+h1.overview {
+    text-align: center;
+ }
+
+
+ .sub_a {
+
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #ed3330;
+    padding: 10px;
+    border-radius: 5px;
+    display: block;
+    border: none;
+    transition: all 0.4s ease 0s;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+ }
+
+ .sub_a:hover {
+
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #c92f2c;
+    padding: 10px;
+    border-radius: 5px;
+    display: block;
+    border: none;
+    transition: all 0.4s ease 0s;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+ }
