--- a/src/main/resources/templates/advoware.html
+++ b/src/main/resources/templates/advoware.html
@@ -11,6 +11,8 @@
 </head>
 <body >
 
+<h1>ADVOWARE</h1>
+
 <table>
     <th>Thema</th>
     <th>Kurzbeschreibung</th>
@@ -20,9 +22,12 @@
 <tr th:each="subject : ${subjects}">
     <td th:utext="${subject.description}"></td>
     <td th:utext="${subject.explanation}"></td>
-    <td><a target="_blank" th:href="@{/pdfs/} + ${subject.id}"><i class="fa fa-file-text"></i></a></td>
+    <td><a id="table_a" target="_blank" th:href="@{/pdfs/} + ${subject.id}"><i class="fa fa-file-text"></i></a></td>
     <td><video width=70% controls="controls"><source th:src="@{/videos/} + ${subject.id}" type="video/mp4"></video></td>
 </tr>
 </table>
+
+<a id="back"  href="/overview">Zurück zur Übersicht</a>
+
 </body>
 </html>
