--- a/src/main/resources/templates/telefon.html
+++ b/src/main/resources/templates/telefon.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+<h1>TELEFON</h1>
+
+
 <table>
 
     <th>Thema</th>
@@ -17,10 +21,13 @@
     <tr th:each="subject : ${subjects}">
     <td th:utext="${subject.description}"></td>
     <td th:utext="${subject.explanation}"></td>
-    <td><a target="_blank" th:href="@{/pdfs/} + ${subject.id}"><i class="fa fa-file-text"></i></a></td>
+    <td><a id="table_a" target="_blank" th:href="@{/pdfs/} + ${subject.id}"><i class="fa fa-file-text"></i></a></td>
     <td><video width=70% controls="controls"><source th:src="@{/videos/} + ${subject.id}" type="video/mp4"></video></td>
 </tr>
 
 </table>
+
+
+<a  id="back" href="/overview">Zurück zur Übersicht</a>
 </body>
 </html>
