--- a/src/main/resources/templates/divers.html
+++ b/src/main/resources/templates/divers.html
@@ -8,6 +8,7 @@
 </head>
 <body >
 
+<a id="back" href="/"><svg aria-hidden="true" width="50px" focusable="false" data-prefix="fas" data-icon="angle-double-left" class="svg-inline--fa fa-angle-double-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"></path></svg></a>
 <h1>DIVERSE THEMEN</h1>
 
 <table>
@@ -25,6 +26,5 @@
     </tr>
 
 </table>
-    <a id="back" href="/overview">Zurück zur Übersicht</a>
 </body>
 </html>
