--- a/src/main/resources/templates/drucker.html
+++ b/src/main/resources/templates/drucker.html
@@ -2,14 +2,14 @@
 <html lang="de" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>beA</title>
+    <title>Divers</title>
     <link href="style.css" th:href="@{/style.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body >
 
 <a id="back" href="/"><svg aria-hidden="true" width="50px" focusable="false" data-prefix="fas" data-icon="angle-double-left" class="svg-inline--fa fa-angle-double-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"></path></svg></a>
-<h1>beA</h1>
+<h1>DRUCKER</h1>
 
 <table>
 
@@ -17,7 +17,6 @@
     <th>Kurzbeschreibung</th>
     <th>Anleitung</th>
     <th>Video</th>
-
 
     <tr th:each="subject : ${subjects}">
         <td th:utext="${subject.description}"></td>
@@ -27,7 +26,5 @@
     </tr>
 
 </table>
-
-
 </body>
 </html>
