--- a/src/main/resources/templates/manuals.html
+++ b/src/main/resources/templates/manuals.html
@@ -7,26 +7,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Font-Awesome/css/regular.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Font-Awesome/css/solid.min.css">
 
-    <title>WICHTIGE KONTAKTDATEN</title>
+    <title>HERSTELLERANLEITUNGEN</title>
 </head>
 
 <body class="overview" >
 
 <a id="back" href="/"><svg aria-hidden="true" width="50px" focusable="false" data-prefix="fas" data-icon="angle-double-left" class="svg-inline--fa fa-angle-double-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"></path></svg></a>
-<h1>UNDER CONSTRUCTION</h1>
+<h1>BEDIENUNGSANLEITUNGEN</h1>
 
-    <div class="contact">
 
-        <a target="_blank" href="#"><h1>Advoware</h1></a>
-        <a target="_blank" href="#"><h1>Frankiermaschine</h1></a>
-        <a target="_blank" href="#"><h1>Telefonanlage</h1></a>
-        <a target="_blank" href="#"><h1>Canon</h1></a>
-        <a target="_blank" href="#"><h1>Develop</h1></a>
-        <a target="_blank" href="#"><h1>Kodak</h1></a>
+    <div th:each="manual : ${manuals}" class="contact">
+        <p class="hint" th:utext="${manual.name}">Bei Problemen mit den Develops</p>
+        <a id="manuallink" target="_blank" th:href="@{/pdfmanuals/} + ${manual.id}"><i class="fa fa-file-text"></i></a>
+        <p class="details" th:utext="${manual.description}"> Develop Ineo364e & Ineo363e | Kunden-Nr.: 35097203<br></p>
 
     </div>
-
-
 
 
 </body>
